templates/apache-http-reverse-proxy.conf.j2 : fix http virtualhost part

--- a/templates/apache-http-reverse-proxy.conf.j2
+++ b/templates/apache-http-reverse-proxy.conf.j2
@@ -7,6 +7,10 @@
     RewriteCond %{HTTPS} Off
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 {% endif %}
+    <Location "{{ item.url }}">
+        ProxyPass "{{ item.protocol | default('http') }}://{{ item.host }}{% if item.port is defined %}:{{ item.port }}{% endif %}/"
+        ProxyPassReverse "{{ item.protocol | default('http') }}://{{ item.host }}{% if item.port is defined %}:{{ item.port }}{% endif %}/"
+    </Location>
     CustomLog ${APACHE_LOG_DIR}/{{ item.name }}_access.log combined
     ErrorLog ${APACHE_LOG_DIR}/{{ item.name }}_error.log
 </VirtualHost>
