--- a/templates/apache-http-reverse-proxy.conf.j2
+++ b/templates/apache-http-reverse-proxy.conf.j2
@@ -7,7 +7,7 @@
     Header set {{ header }}
 {% endfor %}
 {% endif %}
-{% if item.cert_name is defined %}
+{% if item.cert_name is defined and item.force_https is defined and item.force_https %}
     RewriteEngine On
     RewriteCond %{HTTPS} !On
     RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
