--- a/templates/apache-http-site.conf.j2
+++ b/templates/apache-http-site.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}. role: {{ role_name }}, template: apache-http-site.conf.j2
 
-<VirtualHost {{ item.host }}:{{ item.exposed_port | default(80) }}>
+<VirtualHost {{ item.host | default('*') }}:{{ item.exposed_port | default(80) }}>
     ServerName {{ item.servername }}
-    DocumentRoot {{ item.web_root }}
+    DocumentRoot {{ item.documentroot }}
 </VirtualHost>
