--- a/templates/apache-http-reverse-proxy.conf.j2
+++ b/templates/apache-http-reverse-proxy.conf.j2
@@ -1,6 +1,7 @@
 # {{ ansible_managed }}. role: {{ role_name }}, template: apache-http-reverse-proxy.conf.j2
 
-<VirtualHost *:{{ item.port | default(80) }}>
+<VirtualHost {{ item.host | default('*') }}:{{ item.port | default(80) }}>
+    ServerAdmin {{ item.serveradmin | default('webmaster@localhost') }}
     ServerName {{ item.servername }}
 {% if item.serveralias is defined %}
 {% for alias in item.serveralias %}
@@ -17,6 +18,9 @@
 {% for header in item.headers %}
         Header {{ header }}
 {% endfor %}
+{% if item.robots_allowed is undefined or not item.robots_allowed %}
+        Header always set X-Robots-Tag "none"
+{% endif %}
     </IfModule>
 {% endif %}
 {% if item.rewrites is defined %}
@@ -48,7 +52,8 @@
 </VirtualHost>
 {% if item.https is defined and item.https is true %}
 
-<VirtualHost *:{{ item.port | default(443) }}>
+<VirtualHost {{ item.host | default('*') }}:{{ item.port | default(443) }}>
+    ServerAdmin {{ item.serveradmin | default('webmaster@localhost') }}
     ServerName {{ item.servername }}
 {% if item.serveralias is defined %}
 {% for alias in item.serveralias %}
@@ -60,6 +65,9 @@
 {% for header in item.headers %}
         Header {{ header }}
 {% endfor %}
+{% if item.robots_allowed is undefined or not item.robots_allowed %}
+        Header always set X-Robots-Tag "none"
+{% endif %}
     </IfModule>
 {% endif %}
 {% if item.rewrites is defined %}
