templates/apache-http-reverse-proxy.conf.j2 : handle item.rewrite_flags. delete static X-Robots-Tag

--- a/templates/apache-http-reverse-proxy.conf.j2
+++ b/templates/apache-http-reverse-proxy.conf.j2
@@ -11,16 +11,13 @@
 {% if ( item.https is defined and item.https is true ) and ( item.force_https is undefined or item.force_https is defined and item.force_https is true ) %}
     RewriteEngine On
     RewriteCond %{HTTPS} !On
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} {{ item.rewrite_flags | default('[R=301,L]') }}
 {% else %}
 {% if item.headers is defined %}
     <IfModule mod_headers.c>
 {% for header in item.headers %}
         Header {{ header }}
 {% endfor %}
-{% if item.robots_allowed is undefined or not item.robots_allowed %}
-        Header always set X-Robots-Tag "none"
-{% endif %}
     </IfModule>
 {% endif %}
 {% if item.rewrites is defined %}
@@ -65,9 +62,6 @@
 {% for header in item.headers %}
         Header {{ header }}
 {% endfor %}
-{% if item.robots_allowed is undefined or not item.robots_allowed %}
-        Header always set X-Robots-Tag "none"
-{% endif %}
     </IfModule>
 {% endif %}
 {% if item.rewrites is defined %}
