--- a/templates/apache-remoteip.conf.j2
+++ b/templates/apache-remoteip.conf.j2
@@ -1,4 +1,4 @@
-# {{ ansible_managed }}. role: {{ role_name }}. template: apache-remoteip.conf.j2
+# Ansible managed. role: {{ role_name }}. template: apache-remoteip.conf.j2
 
 <IfModule remoteip_module>
     RemoteIPHeader X-Real-IP
